# cmake

./: .gitignore  README.md
code/01helloword/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
code/CMake/01helloword/: CmakeLists.txt
code/Gcc/第一章/: test  test.cpp  test.i  test.s
code/class01/01hellocmake/: CMakeLists.txt  main.cpp
code/class01/02变量/: CMakeLists.txt
code/class02/01_target/: CMakeLists.txt  main.cpp
code/class02/01_target/code/: CMakeLists.txt  tool.cpp  tool.h
code/class02/02multiple/: CMakeLists.txt  main.cpp
code/class02/02multiple/tool/: CMakeLists.txt  tool.cpp  tool.h
code/class03/stu01/: CMakeLists.txt
code/class03/stu02/: CMakeLists.txt
code/class03/stu03/: CMakeLists.txt  main.cpp
code/class03/stu03/src/include/: math.h
code/stup01/: CMakeLists.txt
code/stup01/code/include/: hello.h
code/stup01/code/src/: main.cpp
笔记/: 第一章_cmake介绍.md  第三章_gdb调试.md  第二章_cmake语法介绍.md  第二章_gcc编译器.md  第四章_cmake开发.md
